unpackaged/main/default/objects/SFDCSubscriptionContractLineItem__c/SFDCSubscriptionContractLineItem__c.object-meta.xml
<CustomObject>
    <label>SFDC Subscription Contract Line Item</label>
    <nameField>
        <displayFormat>SubContractLineItem-{000000}</displayFormat>
        <label>SFDC Subscription Contract Line Item Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC Subscription Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>