unpackaged/main/default/objects/SFDCSubscriptionContractLineItem__c/fields/BillingPeriodAmount__c.field-meta.xml
<CustomField>
    <fullName>BillingPeriodAmount__c</fullName>
    <label>Billing Period Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>