unpackaged/main/default/objects/SFDCSubscriptionContractLineItem__c/fields/BillingPeriodUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>BillingPeriodUnitPrice__c</fullName>
    <label>Billing Period Unit Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>