unpackaged/main/default/objects/SFDCSubscriptionContractLineItem__c/fields/CancellationNotificationPeriodDays__c.field-meta.xml
<CustomField>
    <fullName>CancellationNotificationPeriodDays__c</fullName>
    <label>Cancellation Notification Period (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>