unpackaged/main/default/objects/SFDCSubscriptionContractLineItem__c/fields/ContractLineItemName__c.field-meta.xml
<CustomField>
    <fullName>ContractLineItemName__c</fullName>
    <label>Contract Line Item Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>