unpackaged/main/default/objects/SFDCSubscriptionContractLineItem__c/fields/EndDateRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>EndDateRenewalDate__c</fullName>
    <label>End Date / Renewal Date</label>
    <type>Date</type>
</CustomField>