unpackaged/main/default/objects/SFDCSubscriptionContractLineItem__c/fields/Line_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Status__c</fullName>
    <label>Line Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Renew Review</fullName>
            </value>
            <value>
                <fullName>No Longer in Use</fullName>
            </value>
            <value>
                <fullName>Uninstalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>