unpackaged/main/default/objects/SFDCSubscriptionContractLineItem__c/fields/LineItemNotes__c.field-meta.xml
<CustomField>
    <fullName>LineItemNotes__c</fullName>
    <label>Line Item Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>