unpackaged/main/default/objects/SFDCSubscriptionContractLineItem__c/fields/OrderTerm__c.field-meta.xml
<CustomField>
    <fullName>OrderTerm__c</fullName>
    <label>OrderTerm(Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>