unpackaged/main/default/objects/SFDCSubscriptionContractLineItem__c/fields/SalesforceOrgID__c.field-meta.xml
<CustomField>
    <fullName>SalesforceOrgID__c</fullName>
    <defaultValue>'00DOu0000017wUvUAI'</defaultValue>
    <label>Salesforce Org ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>