unpackaged/main/default/objects/SFDCSubscriptionContractLineItem__c/fields/SFDC_Subscription_Contract__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Subscription_Contract__c</fullName>
    <label>SFDC Subscription Contract</label>
    <referenceTo>SFDCSubscriptionContract__c</referenceTo>
    <relationshipLabel>SFDC Subscription Contract Line Items</relationshipLabel>
    <relationshipName>SFDC_Subscription_Contract_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>