unpackaged/main/default/objects/SFDCSubscriptionContractLineItem__c/fields/StartDateEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>StartDateEffectiveDate__c</fullName>
    <label>Start Date / Effective Date</label>
    <type>Date</type>
</CustomField>