unpackaged/main/default/objects/SFDCSubscriptionContractLineItem__c/fields/TotalInvoicedAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalInvoicedAmount__c</fullName>
    <label>Total Invoiced Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>